<resources>
    <string name="app_name">TheMovieDB</string>

    <string name="time_out">Connection time out</string>
    <string name="no_connection">You are not connected to the network</string>
    <string name="movies">Movies</string>
    <string name="tv">TV Shows</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="show_date">Show Date</string>
    <string name="score">Score</string>
    <string name="description">Description</string>
    <string name="detail">Details</string>

</resources>
